Changes to leadHelper

--- a/src/main/metadata-au/classes/LeadHelper.cls
+++ b/src/main/metadata-au/classes/LeadHelper.cls
@@ -688,7 +688,7 @@ public static void auAfter_Insert_Update_Events(List<Lead__c> listNewLeads,map<i
         }
 
         if(!mailEocLead.isEmpty()){
-            send171Email(mailEocLead);
+            //send171Email(mailEocLead);
         }
     }
    
@@ -777,11 +777,11 @@ public static void auAfter_Insert_Update_Events(List<Lead__c> listNewLeads,map<i
                     if(dlerGKIdMap.get(dlerId) != null){
                         ldNewOwnerMap.put(curLdId, dlerGKIdMap.get(dlerId));
                     }
-                    If(!Test.isRunningtest()) {
+                    /*If(!Test.isRunningtest()) {
                         for(User curUser : dlerGKUsers){
                             ldNewOwnerMap.put(curLdId, curUser.Id);
                         }
-                    }
+                    }*/
                 }
 
                 if(!ldNewOwnerMap.isEmpty()){
