--- a/src/main/metadata-au/classes/RetailTaskHelper.cls
+++ b/src/main/metadata-au/classes/RetailTaskHelper.cls
@@ -332,7 +332,7 @@ public with sharing class RetailTaskHelper {
                     }
                      
                       
-                      Messaging.sendEmail(mails);
+                      //Messaging.sendEmail(mails);
                 }
     
     // End of added part, Polaris Yu 2013-8-23
